# ros2-crash-course

d2_multipubsub/demo2/: CMakeLists.txt  package.xml
d2_multipubsub/demo2/scripts/: main.py
d2_multipubsub/sim_camera/: CMakeLists.txt  notes.md  package.xml
d2_multipubsub/sim_camera/config/: sim_camera_rqt.perspective
d2_multipubsub/sim_camera/launch/: camera.launch.xml
d2_multipubsub/sim_oven/: package.xml  setup.cfg  setup.py
d2_multipubsub/sim_oven/config/: solution_rqt_ovensim.perspective
d2_multipubsub/sim_oven/sim_oven/: sim_oven.py
d3_urdf/wheeled_robot/urdf/: base.xacro  head.xacro  mobile_robot.urdf  robot.xacro  robot_specs.txt  wheel.xacro
endeffectors/golf_club_support/: CMakeLists.txt  package.xml
endeffectors/golf_club_support/launch/: test_6iron.launch.py
endeffectors/golf_club_support/meshes/: club_6iron_collision.stl  club_6iron_visual.stl
endeffectors/golf_club_support/rviz/: urdf.rviz
endeffectors/golf_club_support/urdf/: 6iron.xacro  6iron_macro.xacro
endeffectors/nikon_d5600_support/: CMakeLists.txt  package.xml
endeffectors/nikon_d5600_support/launch/: test_d5600.launch.py  test_d5600_rot.launch.py
endeffectors/nikon_d5600_support/rviz/: urdf.rviz
endeffectors/nikon_d5600_support/urdf/: d5600_rot.xacro
endeffectors/schunk_pgn64_support/: CMakeLists.txt  package.xml
endeffectors/schunk_pgn64_support/launch/: test_pgn64.launch.py
endeffectors/schunk_pgn64_support/meshes/: pgn64_closed_collision.stl  pgn64_closed_visual.stl
endeffectors/schunk_pgn64_support/rviz/: urdf.rviz
endeffectors/schunk_pgn64_support/urdf/: pgn64.xacro  pgn64_macro.xacro
motoman/motoman_gp7_support/: CMakeLists.txt  package.xml
motoman/motoman_gp7_support/launch/: demo.launch.py
motoman/motoman_resources/: CMakeLists.txt  package.xml
tool_configs/: rqt_plugins.perspective  rviz_workcell_camera_view.rviz
