<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>motoman_gp7_support</name>
  <version>0.3.6</version>
  <description>
    <p>ROS-Industrial support for the Motoman GP7 (and variants).</p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Motoman GP7 manipulators.
    </p>
    <p>
      <b>Specifications</b>
    </p>
    <ul>
      <li>GP7 - Default</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information 
      found in the online 
      https://www.motoman.com/hubfs/Robots/gp7.pdf
      All urdfs are based on the default motion and joint velocity limits, 
      unless noted otherwise.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
    <p>
      ROS2 package conversion performed June 2022 by A.C. Buynak
    </p>
  </description>
  <author>Eric Marcil</author>
  <author>Shaun Edwards</author>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="buynak.9@osu.edu">A.C. Buynak</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/motoman_gp7_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
  <url type="repository">https://github.com/ros-industrial/motoman</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>motoman_resources</exec_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
